@@ -1,5 +1,9 @@
 This file records noteworthy changes.  (Public domain.)
 
+2018
+* Directories in the -output-directory do not mask files by the same name.
+
+
 2017 (for TeX Live 2017, 19 May 2017)
 2016 (for TeX Live 2016, 21 May 2016)
 2015 (for TeX Live 2015, 21 May 2015)
